--- a/hayden/hayden.css
+++ b/hayden/hayden.css
@@ -1,22 +1,25 @@
 .main {
-    background-color:BLACK;
-    background-image: url('../images/textures/texture1.png');
-    background-blend-mode:hard-light;
-    background-size: 20%;
-    image-rendering: pixelated;
-    margin: 0px;
+    background-color: BLACK;
+    background-image: url('./images/gradient1.png'), url('./images/texture1.png');
+    height: 100vh;
+    image-rendering:pixelated;
+    background-blend-mode:hue,hard-light;
+    background-repeat:no-repeat,repeat;
+    background-size: 100%, 20%;
+    margin: 0px, 0px;
 }
 
 .top_banner {
     backdrop-filter: blur(5px);
     font-family:'Trebuchet MS';
     height: 16vh;
-    width: 100%;
+    width: 95%;
     padding:2%;
-    border-width: 5px;
+    border-width: 7px;
     border-style:ridge;
-    border-color: rgb(0, 35, 68);
-    background-color:rgba(5, 17, 48, 0.664);
+    border-color: rgb(17, 8, 36);
+    background-color:rgba(0, 2, 22, 0.507);
+    background-blend-mode:color-burn;
     display: flex;
     justify-content: center;
     align-items: center;
